添加远程连接终端
